--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ repositories {
 
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-security'
+    compile 'org.springframework.security.oauth:spring-security-oauth2:2.3.2.RELEASE'
+    compile 'org.springframework.security:spring-security-jwt:1.0.10.RELEASE'
+
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
